; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_fold.c_foldCheckClose.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_fold.c_foldCheckClose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32 }

@p_fcl = common dso_local global i64* null, align 8
@NUL = common dso_local global i64 0, align 8
@curwin = common dso_local global %struct.TYPE_5__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @foldCheckClose() #0 {
  %1 = load i64*, i64** @p_fcl, align 8
  %2 = load i64, i64* %1, align 8
  %3 = load i64, i64* @NUL, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %23

5:                                                ; preds = %0
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %7 = call i32 @checkupdate(%struct.TYPE_5__* %6)
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 2
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** @curwin, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i64 @checkCloseRec(i32* %9, i32 %13, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %5
  %21 = call i32 (...) @changed_window_setting()
  br label %22

22:                                               ; preds = %20, %5
  br label %23

23:                                               ; preds = %22, %0
  ret void
}

declare dso_local i32 @checkupdate(%struct.TYPE_5__*) #1

declare dso_local i64 @checkCloseRec(i32*, i32, i32) #1

declare dso_local i32 @changed_window_setting(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
